--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -24,7 +24,7 @@ Style/CollectionMethods:
 
 Style/SymbolArray:
   Description: 'Use %i or %I for arrays of symbols.'
-  Enabled: true
+  Enabled: false
 
 Style/StringLiterals:
   EnforcedStyle: double_quotes
